<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">interpretAR</string>
  <string name="main_page_tag_line">Tap to begin</string>
  <string name="milos_about_me">I am looking for opportunities in software engineering and data analytics roles. I am proficient in Python, Ruby, Java and have exposure to many tools and libraries like jupyter notebooks, numpy, pandas, matplotlib etc. In my free time I like to play soccer, ski, scuba dive and anything where I’m active, solving puzzles or making things.</string>
  <string name="milos_name">Milos Bijelic</string>
  <string name="brandon_name">Brandon Rufino</string>
  <string name="special_thanks">Special thanks to Arvin Angue and Justin Chau</string>
  <string name="brandon_about_me">I am an electrical and biomedical engineering student who is passionate about advancing the health care field through applying engineering principles. I strive under pressure (how else are diamond made?) and am always looking for the next opportunity to develop my skills with goals to one day pursue an academic, R&amp;D, or entrepreneurial career!</string>
  <string name="about_the_team">About Us</string>
  <string name="vocab_info_title"><b>ASL Vocabulary List</b></string>
  <string name="arvin_name">Arvin Angue</string>
  <string name="justin_name">Justin Chau</string>
  <string name="justin_about_me">I am a 5th year Electrical and Biomedical Engineering who is always striving to strengthen my skills and learn new things. When I’m not studying, I enjoy being active playing basketball and tennis, and occasionally solve crosswords to challenge my vocabulary. In the near future, I aim to make an impact in the workplace and make a difference in people’s lives.</string>
  <string name="arvin_about_me">I am an engineering student planning on pursuing a law degree after graduation. I intend to apply the technical knowledge I have gained in my undergrad to become a unique candidate in the practice. While I\'m not developing interpretAR, I can be found at the gym, listening to K-pop, reading books, or watching movies.</string>
  <string name="website_plug">For more information visit: \nbrandonrufino.com/interpretar</string>
  <string name="family_title"><u>Family</u></string>
  <string name="places_title"><u>Places</u></string>
  <string name="time_title"><u>Time</u></string>
  <string name="temperature_title"><u>Temperature</u></string>
  <string name="food_title"><u>Food</u></string>
  <string name="clothes_title"><u>Clothes</u></string>
  <string name="health_title"><u>Health</u></string>
  <string name="feelings_title"><u>Feelings</u></string>
  <string name="requests_title"><u>Requests</u></string>
  <string name="amounts_title"><u>Amounts</u></string>
  <string name="colors_title"><u>Colors</u></string>
  <string name="money_title"><u>Money</u></string>
  <string name="animals_title"><u>Animals</u></string>
  <string name="family_list">mom, dad, boy, girl, marriage, brother, sister, grandpa, grandma, aunt, uncle, baby, single, divorced</string>
  <string name="places_list">home, work, school, store, church, come, go, car/drive, in, out, with</string>
  <string name="time_list">day, night, week, month, year, will, before, today, finish</string>
  <string name="temperature_list">hot, cold</string>
  <string name="food_list">pizza, milk, hamburger, hot dog, egg, apple, cheese, drink, spoon, fork, cup, cereal, water, candy, cookie, hungry</string>
  <string name="clothes_list">shirt, pants, socks, shoes, coat, underwear</string>
  <string name="health_list">wash, hurt, bathroom, brush teeth, sleep, clean</string>
  <string name="feelings_list">happy, angry, sad, sorry, cry, like, good, bad, love</string>
  <string name="requests_list">please, excuse, thank you, help, who, what, when, where, why, how, stop</string>
  <string name="amounts_list">big, tall, full, more</string>
  <string name="colors_list">blue, green, yellow, red, brown, orange, gold,  silver</string>
  <string name="money_list">dollars, cents, cost</string>
  <string name="animals_list">cat, dog, bird, horse, cow, sheep, pig, bug</string>


</resources>