<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="com.meltdownlabs.interpretAR.MainActivity"
        tools:layout_editor_absoluteY="25dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="893dp"
            android:src="@drawable/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="104dp"
            android:layout_height="21dp"
            android:layout_marginBottom="8dp"
            android:text="@string/brandon_name"
            android:textColor="#EDEAE5"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.42" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/brandon_headshot_circle_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/milos_headshot_circle"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="237dp"
            android:layout_height="132dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/milos_about_me"
            android:textColor="#EDEAE5"
            android:textSize="12dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="234dp"
            android:layout_height="214dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/brandon_about_me"
            android:textColor="#EDEAE5"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="88dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="184dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/milos_name"
            android:textColor="#EDEAE5"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/about_the_team"
            android:textColor="#EDEAE5"
            android:textSize="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button"
            android:layout_width="348dp"
            android:layout_height="161dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="492dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Arvin Placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="350dp"
            android:layout_height="161dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="672dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Justin Placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>